NBNV-912 - Fix for the IMT not responding correctly to invalid polygons (too large) should now let the user know

--- a/imt/src/less/picker.less
+++ b/imt/src/less/picker.less
@@ -48,4 +48,8 @@
     padding: 0;
     .ui-corner-tr, .ui-corner-tl, .ui-corner-br, .ui-corner-bl { border-radius: 0;}
   }
+
+  .polygonErrorMessage {
+    color: red;
+  }
 }
